force-app/main/default/objects/Permit_Gate_Pass__c/Permit_Gate_Pass__c.object-meta.xml
<CustomObject>
    <label>Permit Gate Pass</label>
    <nameField>
        <displayFormat>PO-{YYYY}-{dd}-{00}</displayFormat>
        <label>Security No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permit Gate Pass</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>