force-app/main/default/objects/Permit_Gate_Pass__c/fields/Conatct_Name__c.field-meta.xml
<CustomField>
    <fullName>Conatct_Name__c</fullName>
    <label>Conatct Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>