force-app/main/default/objects/Permit_Gate_Pass__c/fields/In_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Time__c</fullName>
    <label>In Time</label>
    <type>DateTime</type>
</CustomField>