force-app/main/default/objects/Permit_Gate_Pass__c/fields/Person_To_meet__c.field-meta.xml
<CustomField>
    <fullName>Person_To_meet__c</fullName>
    <label>Person To meet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>