force-app/main/default/objects/Permit_Gate_Pass__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>ProductName</relationshipName>
    <type>Lookup</type>
</CustomField>