force-app/main/default/objects/Permit_Gate_Pass__c/fields/Purpose_to_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_to_Visit__c</fullName>
    <label>Purpose to Visit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>