force-app/main/default/objects/Permit_Gate_Pass__c/fields/Qnty__c.field-meta.xml
<CustomField>
    <fullName>Qnty__c</fullName>
    <label>Qnty</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>