force-app/main/default/objects/Permit_Gate_Pass__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VendorName</relationshipName>
    <type>Lookup</type>
</CustomField>