force-app/main/default/objects/Permit_Gate_Pass__c/fields/Visitor_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Mobile_Number__c</fullName>
    <label>Visitor Mobile Number</label>
    <type>Phone</type>
</CustomField>