force-app/main/default/objects/Permit_Gate_Pass__c/fields/Visitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Name__c</fullName>
    <label>Visitor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>